<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.diary.DetailDiaryFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_diary_detail"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_diary_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Title"
        android:hint="@string/hint_title"
        android:background="@null"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <TextView
        android:id="@+id/tv_timestamp_created"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_diary_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_timestamp_updated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_timestamp_created"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_diary_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        style="@style/EditTextTheme"
        android:hint="@string/caption_diary_content"
        app:layout_constraintTop_toBottomOf="@id/tv_timestamp_updated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_action_bottom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_diary_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:layout_gravity="top"
            android:gravity="top"
            android:maxLength="500"
            android:textColor="@color/black">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_action_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>